--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 Homepage = "https://github.com/andycasey/sdss-binder-instructions"
 
 [project.entry-points."jupyter_serverproxy_servers"]
-a_sdss = "sdss_binder:setup_intro"
+lab/tree/introduction.ipynb = "sdss_binder:setup_intro"
 marimo = "sdss_binder:setup_marimo"
 
 [tool.setuptools.package-data]
