Fix syntax error in auto-merge workflow (missing 'then')

--- a/.github/workflows/auto-merge-sdss.yml
+++ b/.github/workflows/auto-merge-sdss.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           # Check if the PR author is a member of the sdss organization
           status=$(gh api orgs/sdss/members/$PR_AUTHOR --silent -i 2>/dev/null | head -1 | awk '{print $2}')
-          if [ "$status" = "204" ];
+          if [ "$status" = "204" ]; then
             echo "is_member=true" >> $GITHUB_OUTPUT
             echo "✅ $PR_AUTHOR is a member of the sdss organization"
           else
